# sfngpy

./: README.md  setup.cfg  setup.py
docs/: index.rst
sfngpy/: __init__.py  translator.py
