[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = sfngpy
description = SFNG python codebase
long_description = This package provides basic utilities used in the SFNG package
author = Erik Rosolowsky
author_email = rosolowsky@ualberta.ca
license = GPLv3
url = http://www2.mpia-hd.mpg.de/SFNG/Home.html
edit_on_github = True
github_project = SFNG/sfngpy

[entry_points]
astropy-package-template-example = sfngpy.example_mod:main